Fix header image on mobile Add subscribe section Minor changes

--- a/project/friday/assets/css/layout.css
+++ b/project/friday/assets/css/layout.css
@@ -10,7 +10,7 @@ a:visited { color: #1565c0; }
 
 a:active, a:hover { color: #0d47a1; text-decoration: none; }
 
-#site-header-navbar { background-color: #fafafa; color: #212121; display: flex; align-items: center; padding: .2rem 1rem; justify-items: stretch; position: fixed; width: 100%; height: 45px; }
+#site-header-navbar { background-color: #fafafa; color: #212121; display: flex; align-items: center; padding: .2rem 1rem; justify-items: stretch; position: fixed; width: 100%; height: 50px; box-shadow: 0px 0px 3px -1px #000; }
 
 #site-header-navbar * { display: inline; }
 
@@ -28,13 +28,13 @@ a:active, a:hover { color: #0d47a1; text-decoration: none; }
 
 #site-header-message { display: block; padding: .25rem 1rem; background-color: #212121; color: #fafafa; width: 100%; }
 
-#site-header-spacer { display: block; height: 45px; width: 100%; }
+#site-header-spacer { display: block; height: 50px; width: 100%; }
 
 #site-header-content { background-color: #212121; color: #fafafa; padding: 3rem 1rem; display: flex; align-items: center; }
 
 #site-header-content > * { flex: 1; }
 
-#site-header-content img { max-width: 40%; height: auto; }
+#site-header-content img { width: 50%; height: auto; }
 
 #site-header-content-message { margin-right: 1rem; }
 
@@ -42,9 +42,9 @@ a:active, a:hover { color: #0d47a1; text-decoration: none; }
 
 #site-header-content-message h2 { color: #fff; }
 
-#get-started { display: inline-block; padding: .5rem 1rem; background-color: #0d47a1; color: #fff; }
+#get-started { display: inline-block; padding: .5rem 1rem; background-color: #455a64; color: #fff; }
 
-#get-started:hover, #get-started:active { background-color: #fff; color: #0d47a1; }
+#get-started:hover, #get-started:active { background-color: #37474f; }
 
 #site-main { margin: 2rem 0; }
 
@@ -62,7 +62,7 @@ a:active, a:hover { color: #0d47a1; text-decoration: none; }
 
 .feature-item { flex: 1; }
 
-.feature-item > img { width: 200px; height: auto; margin: 0 auto; }
+.feature-item > img { /* Somehow,The margin doesn't look right without border */ border: 1px solid transparent; width: 200px; height: auto; margin: 0 auto; }
 
 .feature-item > h5 { color: #333; margin: 1rem 0; }
 
@@ -80,6 +80,22 @@ a:active, a:hover { color: #0d47a1; text-decoration: none; }
 
 .blog-item:nth-child(2) { margin: 0 2rem; }
 
-@media (min-width: 320px) and (max-width: 480px) { #site-header-content { flex-direction: column-reverse; } #site-header-content img { max-width: 100%; margin-bottom: 2rem; } .card { padding: 2rem 1rem; } #feature-items, #blog-items { flex-direction: column; } .feature-item:nth-child(2) { margin: 3rem 0; } .blog-item:nth-child(2) { margin: 3rem 0; } }
+#blog-subscribe { background-color: #37474f; color: #ddd; text-align: center; padding: 3rem 0; }
+
+#blog-subscribe h4 { color: #fff; }
+
+#blog-subscribe a { color: #fff; text-decoration: underline; }
+
+#blog-subscribe form { margin: 1rem 0; }
+
+#blog-subscribe form input { border: 1px solid #616161; padding: .5rem 1rem; }
+
+#blog-subscribe form input:focus, #blog-subscribe form input:hover { border-color: #424242; }
+
+#blog-subscribe form input[type="submit"] { transition: .2s; border: none; background-color: #90a4ae; color: #333; }
+
+#blog-subscribe form input[type="submit"]:focus, #blog-subscribe form input[type="submit"]:hover { background-color: #78909c; color: #ccc; }
+
+@media (min-width: 320px) and (max-width: 480px) { #site-header-content { flex-direction: column-reverse; } #site-header-content img { width: 100%; margin-bottom: 2rem; } .card { padding: 2rem 1rem; } #feature-items, #blog-items { flex-direction: column; } .feature-item:nth-child(2) { margin: 3rem 0; } .blog-item:nth-child(2) { margin: 3rem 0; } }
 
 /*# sourceMappingURL=layout.css.map */
